# buaa-compiler-webui

./: .gitignore  CMakeLists.txt  GlobalVar.hpp  README.md  clean.sh  main.cpp  package-lock.json  run_llvm.sh  server.js  start.sh  stop.sh  testfile.txt
front-end/include/: Ast.hpp  Lexer.hpp  Parser.hpp  Symbol.hpp  Token.hpp  Visitor.hpp
front-end/lib/: Ast.cpp  Lexer.cpp  Parser.cpp  Token.cpp  Visitor.cpp
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ControlBar.tsx  Editor.tsx  ErrorPanel.tsx  OutputPanel.tsx
frontend/src/store/: index.ts
frontend/src/store/slices/: codeSlice.ts  outputSlice.ts  uiSlice.ts
llvm/include/: Asm.hpp  IrForward.hpp  LlvmContext.hpp  Module.hpp  SlotTracker.hpp  Type.hpp
llvm/include/value/: Constant.hpp  Function.hpp  Use.hpp  User.hpp  Value.hpp
llvm/include/value/inst/: Instruction.hpp  InstructionType.hpp  Instruction_base.hpp
llvm/lib/: Asm.cpp  LlvmContext.cpp  SlotTracker.cpp  Type.cpp  TypePrinter.cpp  ValuePrinter.cpp
llvm/lib/value/: Function.cpp  User.cpp  Value.cpp
llvm/lib/value/inst/: Instruction.cpp  InstructionType.cpp
mips/include/: MipsForward.hpp  MipsInst.hpp  MipsManager.hpp  MipsReg.hpp  translator.hpp
mips/lib/: MipsManager.cpp  MipsPrinter.cpp  translator.cpp
